# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mm2_offset_validation_summary"
version = "0.1.0"
description = "A Python application that provides MM2 offset validation summary"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
]

[project.scripts]
run_offset_validation_summary = "mm2_offset_validation_summary.offset_validation_summary:main"

[tool.setuptools.packages.find]
where = ["."]
